add ass1 home page

--- a/databasesAndWebApplications/ass1/home.css
+++ b/databasesAndWebApplications/ass1/home.css
@@ -2,8 +2,15 @@ body{
 background-color:grey;
 }
 
+#header h1{
+color:white;
+text-align:center;}
+
 #container{
 background-color:white;
+width:800px;
+margin:auto;
+padding:10px;
 }
 
 #header{
@@ -11,3 +18,24 @@ background-color:green;}
 
 #footer{
 background-color:grey;}
+
+#nav{
+float:left;
+width:180px;
+height:600px;
+padding:0px 10px 10px 0px;}
+
+#nav ul li{
+list-style-type:none;
+color:red;}
+
+#nav ul li h2{
+padding:0px 10px 10px 0px;
+color:green;
+}
+
+#main{
+margin-left:200px;
+height:600px;
+width:600px;}
+
